# solana-stablecoin-standard

./: .editorconfig  .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src/components/: Compliance.tsx  CreateToken.tsx  Dashboard.tsx  MintBurn.tsx  RoleManager.tsx  WalletButton.tsx
app/src/hooks/: useStablecoin.ts
app/src/lib/: connection.ts
backend/: .env.example  Dockerfile  docker-compose.yml  package.json  tsconfig.json
backend/src/: config.ts  index.ts  logger.ts
backend/src/db/: store.ts
backend/src/middleware/: auth.ts  rate-limit.ts
backend/src/routes/: compliance.ts  health.ts  mint.ts  status.ts  webhooks.ts
backend/src/services/: compliance.ts  indexer.ts  mint-service.ts  webhook.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  GETTING_STARTED.md  OPERATIONS.md  SDK_REFERENCE.md  SSS-1.md  SSS-2.md
examples/: sss-1-config.json  sss-2-config.toml  sss-3-config.json
modules/sss-compliance/: Cargo.toml
modules/sss-compliance/src/: lib.rs
modules/sss-oracle/: Cargo.toml
modules/sss-oracle/src/: lib.rs
modules/sss-roles/: Cargo.toml
modules/sss-roles/src/: lib.rs
programs/sss-token/: Cargo.toml
programs/sss-token/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/sss-token/src/instructions/: blacklist_add.rs  blacklist_remove.rs  burn.rs  freeze_account.rs  initialize.rs  mint.rs  mod.rs  pause.rs  seize.rs  thaw_account.rs  transfer_authority.rs  unpause.rs  update_minter.rs  update_roles.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: error.rs  lib.rs  state.rs
programs/sss-transfer-hook/src/instructions/: execute.rs  initialize_extra_account_metas.rs  mod.rs
scripts/: deploy.sh  setup.sh
sdk/core/: package.json  tsconfig.json
sdk/core/__tests__/: errors.test.ts  events.test.ts  pda.test.ts  presets.test.ts  utils.test.ts
sdk/core/src/: compliance.ts  errors.ts  events.ts  index.ts  oracle.ts  pda.ts  presets.ts  roles.ts  stablecoin.ts  types.ts  utils.ts
sdk/core/src/cli/: index.ts
sdk/core/src/cli/commands/: audit.ts  blacklist.ts  burn.ts  freeze.ts  (+8 more)
tests/: sss-1-extended.ts  sss-1.ts  sss-2.ts
trident-tests/fuzz_tests/: Cargo.toml  fuzz_0.rs
tui/: Cargo.toml
tui/src/: app.rs  input.rs  main.rs  rpc.rs
tui/src/ui/: compliance.rs  dashboard.rs  events.rs  holders.rs  mod.rs  supply.rs
(+3 files in other folders)
