[workspace]
members = [
    "programs/*",
    "modules/*",
    "tui",
    "trident-tests/fuzz_tests",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token", "token_2022", "token_2022_extensions", "associated_token"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.6"
spl-transfer-hook-interface = "0.8"
spl-tlv-account-resolution = "0.8"
solana-program = "2.1"
borsh = "0.10"
