[package]
name = "sss-tui"
version = "0.1.0"
description = "Terminal UI dashboard for Solana Stablecoin Standard"
edition = "2021"
license = "MIT"

[[bin]]
name = "sss-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
solana-client = "2.1"
solana-sdk = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
